[package]
name = 'dogmu'
description = 'Remap controller to keyboard and mouse inputs'
license-file = 'LICENSE'
version = '0.0.1'
edition = '2024'

[dependencies]
duration-str = '0.11.2'
enigo = { version = '0.2.1', default-features = false, features = ['serde', 'wayland'] }
gilrs = { version = '0.11.0', features = ['serde'] }
if_chain = '*'
serde = '1.0.214'
shlex = '1.3.0'
single-instance = '0.3.3'
tokio = { version = '1.41.0', features = ['macros', 'rt-multi-thread', 'time'] }
toml = '0.8.19'

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = '0.29.0', default-features = false, features = ['signal'] }
atomic = '0.6.0'